# simulationOfTwoAR.Drones

./: README.md  some_notes
cvg_sim_gazebo/launch/: testworld_with_three_ardrone.launch  two_ardrone.launch
cvg_sim_gazebo/src/: drones_fly.py
cvg_sim_gazebo/worlds/: empty.world  empty_upd.world
init_scripts/: readme.txt  ros_install.sh  start_sim.sh  workspace_setup.sh
simulationOfTwoARDrones/: CMakeLists.txt  package.xml
tum_simulator/: package.xml
