<?xml version="1.0"?>
<package>
  <name>simulationOfTwoARDrones</name>
  <version>0.0.0</version>
  <description>The simulationOfTwoARDrones</description>
  <maintainer email="email@gmail.com">Nick</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>cvg_sim_msgs</run_depend>
  <run_depend>cvg_sim_gazebo</run_depend>
  <run_depend>cvg_sim_gazebo_plugins</run_depend>
  <run_depend>message_to_tf</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
