<?xml version="1.0"?>
<package>
  <name>tum_simulator</name>
  <version>0.0.0</version>
  <description>The tum_simulator</description>
  <maintainer email="nik-138@mail.ru">Nick</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>cvg_sim_msgs</run_depend>
  <run_depend>cvg_sim_gazebo</run_depend>
  <run_depend>cvg_sim_gazebo_plugins</run_depend>
  <run_depend>message_to_tf</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
